<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MainFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:id="@+id/l1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonAdd_text" />
    </LinearLayout>
    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />

    <LinearLayout
        android:id="@+id/l2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/buttonDelete_text"
            android:layout_weight="1" />

        <Button
            android:id="@+id/buttonChange"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/buttonChange_text"
            android:layout_weight="1" />

        <Button
            android:id="@+id/buttonSearch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/buttonSearchElement_text"
            android:layout_weight="1" />

        <Button
            android:id="@+id/buttonLoadData"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/buttonLoadData_text"
            android:layout_weight="1" />
    </LinearLayout>



    <ListView
        android:id="@+id/listview"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        />

    </LinearLayout>
</FrameLayout>